--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
                 </div>
                 <div class="hidden space-x-8 md:flex md:ml-10">
                   <a
-                    href="#"
+                    href="#tarif"
                     class="text-base font-medium text-white hover:text-gray-300"
                     >Tarif</a
                   >
@@ -172,7 +172,7 @@
               <div class="pt-5 pb-6">
                 <div class="px-2 space-y-1">
                   <a
-                    href="#"
+                    href="#tarif"
                     class="block px-3 py-2 rounded-md text-base font-medium text-gray-900 hover:bg-gray-50"
                     >Tarifs</a
                   >
@@ -737,7 +737,7 @@
           </div>
 
           <!-- Section tarif -->
-          <div class="relative bg-cyan-800 text-white py-16 sm:py-24 lg:py-32">
+          <div id="tarif" class="relative bg-cyan-800 text-white py-16 sm:py-24 lg:py-32">
             <div class="mx-auto max-w-md px-4 text-center sm:max-w-3xl sm:px-6 lg:px-8 lg:max-w-7xl">
               <h2>Nos tarifs</h2>
               <p>
