--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
   }
   ```
 -->
-    <div class="bg-white">
+    <div class="bg-white font-Raleway">
       <div class="relative overflow-hidden">
         <header class="relative">
           <div class="bg-cyan-800 shadow-2xl pt-6 pb-6">
@@ -223,7 +223,9 @@
                 >
                   <div class="lg:py-24">
                     <h1
-                      class="mt-4 text-4xl tracking-tight font-bold text-white sm:mt-5 sm:text-6xl sm:tracking-tight lg:mt-6 xl:text-6xl xl:tracking-tight"
+                      class="
+                      font-Focobold font-bold
+                      mt-4 text-4xl tracking-tight font-bold text-white sm:mt-5 sm:text-6xl sm:tracking-tight lg:mt-6 xl:text-6xl xl:tracking-tight"
                     >
                       <span class="block">Performez la gestion</span>
                       <span
@@ -291,13 +293,15 @@
             <div
               class="mx-auto max-w-md px-4 text-center sm:max-w-3xl sm:px-6 lg:px-8 lg:max-w-7xl"
             >
-              <h2 class="text-lg font-semibold text-cyan-600">
+              <h2 class="font-Focobold font-bold text-3xl  text-cyan-800">
                 Votre SCI, votre gestion,
+                <br/>
+                vos résultats... mais pas que !
               </h2>
               <p
                 class="mt-2 text-3xl font-bold text-gray-900 tracking-tight sm:text-4xl sm:tracking-tight"
               >
-                vos résultats... mais pas que !
+
               </p>
 
               <div class="mt-12">
@@ -417,7 +421,7 @@
               </div>
             </div>
 
-            <h2 class="mt-30 text-lg font-semibold text-cyan-600">
+            <h2 class="font-Focobold font-bold mt-30 text-3xl text-cyan-800">
                 Les spécificités en pratique, <br/>
                 quels types de SCI sont concernées ?
               </h2>
